# PixPipe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Z_Hash.bat  convert_to_jxl.bat  convert_to_jxl.sh  io-new.bat  io-old.bat  jpg-to-jxl.nu  jpg-to-jxl.ps1  timestamp-rename.nu  timestamp-rename.ps1
.github/memory/: session-memory.json
.github/workflows/: build.yml
coverage/: tarpaulin-report.html
src/: event_handler.rs  main.rs  utils.rs
src/config/: mod.rs
src/core_mod/: files.rs  hash.rs  mod.rs
src/ui/: components.rs  mod.rs  render.rs
tests/: integration_test.rs
