[package]
name = "pixpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
walkdir = "2.4"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.30"
image = "0.25"
regex-lite = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
kamadak-exif = "0.5"
notify = "7.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "0.8"
